--- a/sqrattest/sqrattest.vcproj
+++ b/sqrattest/sqrattest.vcproj
@@ -181,7 +181,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\Main.cpp"
+				RelativePath=".\main.cpp"
 				>
 			</File>
 			<File
@@ -278,6 +278,10 @@
 			</File>
 			<File
 				RelativePath=".\ScriptLoading.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\SquirrelFunctions.cpp"
 				>
 			</File>
 			<File
