--- a/sq/sq.vcproj
+++ b/sq/sq.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8.00"
-	Name="sqrattest"
-	ProjectGUID="{9EC4B19C-F37A-45C8-B7D5-C846C47F4CD0}"
-	RootNamespace="sqrattest"
+	Name="sq"
+	ProjectGUID="{B3603CE9-B950-4111-B2DE-8259F44A8851}"
+	RootNamespace="sq"
 	Keyword="Win32Proj"
 	>
 	<Platforms>
@@ -43,8 +43,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;&quot;..\gtest-1.3.0\include&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
+				AdditionalIncludeDirectories="..\include;"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -64,7 +64,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="gtest.lib squirrel.lib sqstdlib.lib sqratimport.lib"
+				AdditionalDependencies="squirrel.lib sqstdlib.lib sqratimport.lib"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 				GenerateDebugInformation="true"
@@ -122,8 +122,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;&quot;..\gtest-1.3.0\include&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
+				AdditionalIncludeDirectories="..\include;"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -143,7 +143,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="gtest.lib squirrel.lib sqstdlib.lib sqratimport.lib"
+				AdditionalDependencies="squirrel.lib sqstdlib.lib sqimport.lib"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 				GenerateDebugInformation="true"
@@ -200,8 +200,8 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\include;&quot;..\gtest-1.3.0\include&quot;"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
+				AdditionalIncludeDirectories="..\include;"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -219,7 +219,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="gtest.lib squirrel.lib sqstdlib.lib sqratimport.lib"
+				AdditionalDependencies="squirrel.lib sqstdlib.lib sqratimport.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 				GenerateDebugInformation="true"
@@ -279,8 +279,8 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\include;&quot;..\gtest-1.3.0\include&quot;"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
+				AdditionalIncludeDirectories="..\include;"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -298,7 +298,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="gtest.lib squirrel.lib sqstdlib.lib sqratimport.lib"
+				AdditionalDependencies="squirrel.lib sqstdlib.lib sqimport.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 				GenerateDebugInformation="true"
@@ -342,11 +342,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\main.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Vector.cpp"
+				RelativePath=".\sq.c"
 				>
 			</File>
 		</Filter>
@@ -355,124 +351,12 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
-			<File
-				RelativePath=".\Fixture.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Vector.h"
-				>
-			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
-		</Filter>
-		<Filter
-			Name="sqrat"
-			>
-			<File
-				RelativePath="..\include\sqrat\sqratAllocator.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratClass.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratClassType.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratConst.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratFunction.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratGlobalMethods.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratMemberMethods.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratObject.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratOverloadMethods.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratScript.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratTable.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratTypes.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratUtil.h"
-				>
-			</File>
-		</Filter>
-		<Filter
-			Name="Unit Tests"
-			>
-			<File
-				RelativePath=".\ClassBinding.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ClassInstances.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ClassProperties.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\FunctionOverload.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ImportTest.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ScriptLoading.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\SquirrelFunctions.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TableBinding.cpp"
-				>
-			</File>
-		</Filter>
-		<Filter
-			Name="scripts"
-			>
-			<File
-				RelativePath=".\scripts\hello.nut"
-				>
-			</File>
-			<File
-				RelativePath=".\scripts\samplemodule.nut"
-				>
-			</File>
 		</Filter>
 	</Files>
 	<Globals>
