--- a/sqimport/sqratimport.vcproj
+++ b/sqimport/sqratimport.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8.00"
-	Name="sqrattest"
-	ProjectGUID="{9EC4B19C-F37A-45C8-B7D5-C846C47F4CD0}"
-	RootNamespace="sqrattest"
+	Name="sqratimport"
+	ProjectGUID="{4AF3668E-3792-4116-8F27-B9B896DE3BA4}"
+	RootNamespace="sqimport"
 	Keyword="Win32Proj"
 	>
 	<Platforms>
@@ -22,7 +22,7 @@
 			Name="Debug|Win32"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
-			ConfigurationType="1"
+			ConfigurationType="4"
 			CharacterSet="1"
 			>
 			<Tool
@@ -43,8 +43,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;&quot;..\gtest-1.3.0\include&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
+				AdditionalIncludeDirectories="..\include"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -63,19 +63,10 @@
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
-				Name="VCLinkerTool"
-				AdditionalDependencies="gtest.lib squirrel.lib sqstdlib.lib sqratimport.lib"
-				LinkIncremental="2"
-				AdditionalLibraryDirectories="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-				GenerateDebugInformation="true"
-				SubSystem="1"
-				TargetMachine="1"
+				Name="VCLibrarianTool"
 			/>
 			<Tool
 				Name="VCALinkTool"
-			/>
-			<Tool
-				Name="VCManifestTool"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -87,12 +78,6 @@
 				Name="VCFxCopTool"
 			/>
 			<Tool
-				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
-			/>
-			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
@@ -100,7 +85,7 @@
 			Name="Debug|x64"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
-			ConfigurationType="1"
+			ConfigurationType="4"
 			CharacterSet="1"
 			>
 			<Tool
@@ -122,8 +107,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;&quot;..\gtest-1.3.0\include&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
+				AdditionalIncludeDirectories="..\include"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -142,19 +127,10 @@
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
-				Name="VCLinkerTool"
-				AdditionalDependencies="gtest.lib squirrel.lib sqstdlib.lib sqratimport.lib"
-				LinkIncremental="2"
-				AdditionalLibraryDirectories="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-				GenerateDebugInformation="true"
-				SubSystem="1"
-				TargetMachine="17"
+				Name="VCLibrarianTool"
 			/>
 			<Tool
 				Name="VCALinkTool"
-			/>
-			<Tool
-				Name="VCManifestTool"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -166,12 +142,6 @@
 				Name="VCFxCopTool"
 			/>
 			<Tool
-				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
-			/>
-			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
@@ -179,7 +149,7 @@
 			Name="Release|Win32"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
-			ConfigurationType="1"
+			ConfigurationType="4"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
 			>
@@ -200,8 +170,8 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\include;&quot;..\gtest-1.3.0\include&quot;"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
+				AdditionalIncludeDirectories="..\include"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -218,21 +188,10 @@
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
-				Name="VCLinkerTool"
-				AdditionalDependencies="gtest.lib squirrel.lib sqstdlib.lib sqratimport.lib"
-				LinkIncremental="1"
-				AdditionalLibraryDirectories="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-				GenerateDebugInformation="true"
-				SubSystem="1"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
-				TargetMachine="1"
+				Name="VCLibrarianTool"
 			/>
 			<Tool
 				Name="VCALinkTool"
-			/>
-			<Tool
-				Name="VCManifestTool"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -244,12 +203,6 @@
 				Name="VCFxCopTool"
 			/>
 			<Tool
-				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
-			/>
-			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
@@ -257,7 +210,7 @@
 			Name="Release|x64"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
-			ConfigurationType="1"
+			ConfigurationType="4"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
 			>
@@ -279,8 +232,8 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\include;&quot;..\gtest-1.3.0\include&quot;"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
+				AdditionalIncludeDirectories="..\include"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -297,21 +250,10 @@
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
-				Name="VCLinkerTool"
-				AdditionalDependencies="gtest.lib squirrel.lib sqstdlib.lib sqratimport.lib"
-				LinkIncremental="1"
-				AdditionalLibraryDirectories="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-				GenerateDebugInformation="true"
-				SubSystem="1"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
-				TargetMachine="17"
+				Name="VCLibrarianTool"
 			/>
 			<Tool
 				Name="VCALinkTool"
-			/>
-			<Tool
-				Name="VCManifestTool"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -321,12 +263,6 @@
 			/>
 			<Tool
 				Name="VCFxCopTool"
-			/>
-			<Tool
-				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -341,14 +277,6 @@
 			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
-			<File
-				RelativePath=".\main.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Vector.cpp"
-				>
-			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -356,11 +284,15 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\Fixture.h"
+				RelativePath="..\include\sqmodule.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Vector.h"
+				RelativePath=".\sqratimport.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\include\sqratimport.h"
 				>
 			</File>
 		</Filter>
@@ -369,110 +301,6 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
-		</Filter>
-		<Filter
-			Name="sqrat"
-			>
-			<File
-				RelativePath="..\include\sqrat\sqratAllocator.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratClass.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratClassType.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratConst.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratFunction.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratGlobalMethods.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratMemberMethods.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratObject.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratOverloadMethods.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratScript.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratTable.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratTypes.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratUtil.h"
-				>
-			</File>
-		</Filter>
-		<Filter
-			Name="Unit Tests"
-			>
-			<File
-				RelativePath=".\ClassBinding.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ClassInstances.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ClassProperties.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\FunctionOverload.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ImportTest.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ScriptLoading.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\SquirrelFunctions.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TableBinding.cpp"
-				>
-			</File>
-		</Filter>
-		<Filter
-			Name="scripts"
-			>
-			<File
-				RelativePath=".\scripts\hello.nut"
-				>
-			</File>
-			<File
-				RelativePath=".\scripts\samplemodule.nut"
-				>
-			</File>
 		</Filter>
 	</Files>
 	<Globals>
