--- a/sqratthread/sqratthread.vcproj
+++ b/sqratthread/sqratthread.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8.00"
-	Name="sqrattest"
-	ProjectGUID="{9EC4B19C-F37A-45C8-B7D5-C846C47F4CD0}"
-	RootNamespace="sqrattest"
+	Name="sqratthread"
+	ProjectGUID="{E2A9E1AF-60A2-46D3-961E-D2409ABA8077}"
+	RootNamespace="sqratthread"
 	Keyword="Win32Proj"
 	>
 	<Platforms>
@@ -22,7 +22,7 @@
 			Name="Debug|Win32"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
-			ConfigurationType="1"
+			ConfigurationType="2"
 			CharacterSet="1"
 			>
 			<Tool
@@ -43,8 +43,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;&quot;..\gtest-1.3.0\include&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
+				AdditionalIncludeDirectories="..\include"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;SQRATTHREAD_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -64,11 +64,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="gtest.lib squirrel.lib sqstdlib.lib sqratimport.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 				GenerateDebugInformation="true"
-				SubSystem="1"
+				SubSystem="2"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -100,7 +98,7 @@
 			Name="Debug|x64"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
-			ConfigurationType="1"
+			ConfigurationType="2"
 			CharacterSet="1"
 			>
 			<Tool
@@ -122,11 +120,11 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;&quot;..\gtest-1.3.0\include&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
+				AdditionalIncludeDirectories="..\include"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;SQRATTHREAD_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
+				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -143,11 +141,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="gtest.lib squirrel.lib sqstdlib.lib sqratimport.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 				GenerateDebugInformation="true"
-				SubSystem="1"
+				SubSystem="2"
 				TargetMachine="17"
 			/>
 			<Tool
@@ -179,7 +175,7 @@
 			Name="Release|Win32"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
-			ConfigurationType="1"
+			ConfigurationType="2"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
 			>
@@ -200,9 +196,9 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\include;&quot;..\gtest-1.3.0\include&quot;"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
-				RuntimeLibrary="0"
+				AdditionalIncludeDirectories="..\include"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;SQRATTHREAD_EXPORTS"
+				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -219,11 +215,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="gtest.lib squirrel.lib sqstdlib.lib sqratimport.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 				GenerateDebugInformation="true"
-				SubSystem="1"
+				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				TargetMachine="1"
@@ -257,7 +251,7 @@
 			Name="Release|x64"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
-			ConfigurationType="1"
+			ConfigurationType="2"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
 			>
@@ -279,9 +273,9 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\include;&quot;..\gtest-1.3.0\include&quot;"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
-				RuntimeLibrary="0"
+				AdditionalIncludeDirectories="..\include"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;SQRATTHREAD_EXPORTS"
+				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -298,11 +292,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="gtest.lib squirrel.lib sqstdlib.lib sqratimport.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 				GenerateDebugInformation="true"
-				SubSystem="1"
+				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				TargetMachine="17"
@@ -342,11 +334,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\main.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Vector.cpp"
+				RelativePath=".\sqratThread.cpp"
 				>
 			</File>
 		</Filter>
@@ -356,11 +344,7 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\Fixture.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Vector.h"
+				RelativePath=".\sqratThread.h"
 				>
 			</File>
 		</Filter>
@@ -369,110 +353,6 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
-		</Filter>
-		<Filter
-			Name="sqrat"
-			>
-			<File
-				RelativePath="..\include\sqrat\sqratAllocator.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratClass.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratClassType.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratConst.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratFunction.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratGlobalMethods.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratMemberMethods.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratObject.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratOverloadMethods.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratScript.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratTable.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratTypes.h"
-				>
-			</File>
-			<File
-				RelativePath="..\include\sqrat\sqratUtil.h"
-				>
-			</File>
-		</Filter>
-		<Filter
-			Name="Unit Tests"
-			>
-			<File
-				RelativePath=".\ClassBinding.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ClassInstances.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ClassProperties.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\FunctionOverload.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ImportTest.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ScriptLoading.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\SquirrelFunctions.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TableBinding.cpp"
-				>
-			</File>
-		</Filter>
-		<Filter
-			Name="scripts"
-			>
-			<File
-				RelativePath=".\scripts\hello.nut"
-				>
-			</File>
-			<File
-				RelativePath=".\scripts\samplemodule.nut"
-				>
-			</File>
 		</Filter>
 	</Files>
 	<Globals>
